css fix on mobile figure elements

--- a/themes/child-theme/assets/sass/components.scss
+++ b/themes/child-theme/assets/sass/components.scss
@@ -446,13 +446,17 @@ $article-list-title-height--large: 6rem;
         }
 
         &:nth-of-type(2n-1) {
-            float: left;
-            margin-right: 2rem;
+            @include breakpoint(small){
+                float: left;
+                margin-right: 2rem;
+            }
         }
 
         &:nth-of-type(2n) {
-            float: right;
-            margin-left: 2rem;
+            @include breakpoint(small){
+                float: right;
+                margin-left: 2rem;
+            }
         }
 
         &:first-child {
